adjusted more styling for android apk changed workot-log button to fit log to make button stop overflowing

--- a/fitness-client/src/style/register.css
+++ b/fitness-client/src/style/register.css
@@ -1,6 +1,6 @@
 .register-wrapper {
   width: 540px;
-  height: 960px;
+  height: 100%;
   margin: 0 auto;
   padding: 60px 35px 35px 35px;
   border-radius: 40px;
@@ -15,10 +15,28 @@
   margin: 10px;
   letter-spacing: 2px;
 }
+.register-fields input{
+    /* margin: 0; */
+  
+    /* height: 105vh; */
+    width: 100%;
+  
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
+  
+    /* overflow: hidden; */
+    font-family: "Lato", sans-serif;
+    font-weight: 700;
+    /* color: #555; */
+  
+    /* background: #10131F; */
+}
 
 #register-container,
 .register-fields {
   background: none;
+
 }
 
 #activity-selector {
